[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenteval-sdk"
version = "0.1.0"
description = "Open-source LLM evaluation SDK — LLM-as-judge + deterministic scorers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Amol Verma", email = "amilbcahat@gmail.com" },
]
keywords = ["llm", "evaluation", "testing", "ai-agents", "scoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0",
    "anthropic>=0.40.0",
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
langfuse = ["langfuse>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
all = ["langfuse>=2.0"]

[project.scripts]
agenteval = "agenteval.cli.main:cli"

[project.urls]
Homepage = "https://github.com/amol-verma-cevian/agenteval"
Repository = "https://github.com/amol-verma-cevian/agenteval"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
